steps/3/deployment_back.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-awesome-back
spec:
  replicas: 3
      
  minReadySeconds: 5 #time between actions
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 #Amount of pods more than desired during deployment
      maxUnavailable: 1  #Amount of pods can be unavailable during the deployment

  template:
    metadata:
      labels:
        app: back-chat

    spec:
      containers:   
      - name: back-app
        image: 172.17.1.1:5000/my-awesome-backend-app:0.0.2
