steps/3/deployment_front.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-awesome-front
spec:
  replicas: 2

  template:
    metadata:
      labels:
        app: front-chat

    spec:
      containers:   
      - name: front-app
        image: 172.17.4.1:5000/my-awesome-frontend-app:0.0.1
        imagePullPolicy: Always
