steps/3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
  name: example
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: my-awesome-front
          servicePort: 8080
        path: /
